Commit with the calendar and profile editor - profiles

--- a/templates/base.html
+++ b/templates/base.html
@@ -15,15 +15,31 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
+                    <!-- Existing links -->
                     <li class="nav-item">
                         <a class="nav-link" href="{% url 'student_dashboard' %}">Dashboard</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="{% url 'homework_calendar' %}">Calendar</a>
                     </li>
-                    <li class="nav-item">
-                    <a class="nav-link" href="{% url 'logout' %}">Logout</a>  
-                </li>
+
+                    <!-- Only display profile-related links if the user is logged in -->
+                    {% if user.is_authenticated %}
+                        <li class="nav-item">
+                            <a class="nav-link" href="{% url 'profile_view' user.id %}">Profile</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="{% url 'edit_profile' %}">Edit Profile</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="{% url 'logout' %}">Logout</a>
+                        </li>
+                    {% else %}
+                        <!-- Show login link if not authenticated -->
+                        <li class="nav-item">
+                            <a class="nav-link" href="{% url 'login' %}">Login</a>
+                        </li>
+                    {% endif %}
                 </ul>
             </div>
         </div>
