--- a/templates/teacher_dashboard.html
+++ b/templates/teacher_dashboard.html
@@ -3,7 +3,7 @@
 {% block content %}
 <h1>Teacher Dashboard</h1>
 
-<h2>Your Homework</h2>
+<h2>Your Tasks</h2>
 <ul>
     {% for homework in homeworks %}
     <li>
