--- a/templates/homework_calendar.html
+++ b/templates/homework_calendar.html
@@ -1,13 +1,52 @@
 {% extends 'base.html' %}
 {% block content %}
-<h1>Homework Calendar</h1>
 
+<h1>Homework Calendar</h1>
+    
 <ul>
     {% for homework in homeworks %}
     <li>
         <strong>{{ homework.title }}</strong><br>
-        Due: {{ homework.due_date }}
+        Assigned: {{ homework.assigned_date|date:"Y-m-d" }}<br>
+        Due: {{ homework.due_date|date:"Y-m-d" }}<br>
     </li>
     {% endfor %}
 </ul>
+    
+<div id="calendar"></div>
+
+<!-- Include FullCalendar CSS and JS -->
+<link href="https://cdn.jsdelivr.net/npm/fullcalendar@5.9.0/main.min.css" rel="stylesheet">
+<script src="https://cdn.jsdelivr.net/npm/fullcalendar@5.9.0/main.min.js"></script>
+
+<script>
+document.addEventListener('DOMContentLoaded', function() {
+    var calendarEl = document.getElementById('calendar');
+    var calendar = new FullCalendar.Calendar(calendarEl, {
+        initialView: 'dayGridMonth', 
+        headerToolbar: {
+            left: 'prev,next today',
+            center: 'title',
+            right: 'dayGridMonth,timeGridWeek,timeGridDay'
+        },
+        events: [
+            {% for homework in homeworks %}
+            {
+                title: '{{ homework.title }}',
+                start: '{{ homework.assigned_date|date:"Y-m-d" }}',  
+                end: '{{ homework.due_date|date:"Y-m-d" }}', 
+                backgroundColor: 'green',  
+            },
+            {% endfor %}
+        ],
+        eventColor: '#378006',  
+        editable: false,
+        eventClick: function(info) {
+            alert('Homework: ' + info.event.title + '\nDue on: ' + info.event.end.toISOString().split('T')[0]);
+        }
+    });
+    calendar.render();
+});
+</script>
+
 {% endblock %}
