--- a/templates/base.html
+++ b/templates/base.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -5,6 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{% block title %}Classroom{% endblock %}</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="{% static 'styles/base/global.css' %}">
+    <link rel="stylesheet" type="text/css" href="{% static 'styles/base/sidebar.css' %}">
+    <link rel="stylesheet" type="text/css" href="{% static 'styles/base/content.css' %}">
+    <link rel="stylesheet" type="text/css" href="{% static 'styles/base/elements.css' %}">
 </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
