--- a/templates/base.html
+++ b/templates/base.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" type="text/css" href="{% static 'styles/base/sidebar.css' %}">
     <link rel="stylesheet" type="text/css" href="{% static 'styles/base/content.css' %}">
     <link rel="stylesheet" type="text/css" href="{% static 'styles/base/elements.css' %}">
+<link rel="stylesheet" type="text/css" href="{% static 'styles/profile_card.css' %}">
 </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -33,9 +34,7 @@
                         <li class="nav-item">
                             <a class="nav-link" href="{% url 'profile_view' user.id %}">Profile</a>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="{% url 'edit_profile' %}">Edit Profile</a>
-                        </li>
+
                         <li class="nav-item">
                             <a class="nav-link" href="{% url 'logout' %}">Logout</a>
                         </li>
