--- a/templates/upload_submission.html
+++ b/templates/upload_submission.html
@@ -1,10 +1,11 @@
 {% extends 'base.html' %}
 {% block content %}
-<h1>Submit Homework for {{ homework.title }}</h1>
-
-<form method="post" enctype="multipart/form-data">
-    {% csrf_token %}
-    {{ form.as_p }}
-    <button type="submit">Submit</button>
-</form>
+<div class="submission-form-container">
+    <h1>Submit Homework for {{ homework.title }}</h1>
+    <form method="post" enctype="multipart/form-data">
+        {% csrf_token %}
+        {{ form.as_p }}
+        <button type="submit">Submit</button>
+    </form>
+</div>
 {% endblock %}
