--- a/static/styles/base/global.css
+++ b/static/styles/base/global.css
@@ -12,10 +12,15 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .container {
-    padding: 20px;
+    padding: 10px;
 }
 
-/* Navbar */
+.navbar-logo {
+    width: 20%;
+    height: auto;
+    object-fit: contain;
+    margin-right: 10px;
+}
 .navbar {
     background-color: #005b96;
     padding: 10px;
