--- a/static/styles/login.css
+++ b/static/styles/login.css
@@ -39,7 +39,7 @@ h1 {
 }
 
 .toggle-role button.active {
-    background-color: #4CAF50;
+    background-color: #005b96;
     color: white;
     transform: translateY(2px);
     box-shadow: inset 0 2px 5px rgba(0, 0, 0, 0.2);
@@ -75,7 +75,7 @@ input[type="text"], input[type="password"] {
 
 button[type="submit"] {
     width: 100%;
-    background-color: #4CAF50;
+    background-color: #005b96;
     color: white;
     padding: 10px;
     margin: 10px 0;
@@ -86,7 +86,7 @@ button[type="submit"] {
 }
 
 button[type="submit"]:hover {
-    background-color: #45a049;
+    background-color: #005b96;
 }
 
 /* Form responsiveness */
