--- a/templates/give_feedback.html
+++ b/templates/give_feedback.html
@@ -1,11 +1,11 @@
 {% extends 'base.html' %}
-
 {% block content %}
-<h1>Give Feedback for {{ submission.student.username }}</h1>
-
-<form method="post">
-    {% csrf_token %}
-    {{ form.as_p }}
-    <button type="submit" class="btn btn-primary">Submit Feedback</button>
-</form>
+<div class="feedback-form-container">
+    <h1>Give Feedback for {{ submission.student.username }}</h1>
+    <form method="post">
+        {% csrf_token %}
+        {{ form.as_p }}
+        <button type="submit" class="btn btn-primary">Submit Feedback</button>
+    </form>
+</div>
 {% endblock %}
