--- a/templates/homework_calendar.html
+++ b/templates/homework_calendar.html
@@ -3,17 +3,7 @@
 
 <h1>Homework Calendar</h1>
     
-<ul>
-    {% for homework in homeworks %}
-    <li>
-        <strong>{{ homework.title }}</strong><br>
-        Assigned: {{ homework.assigned_date|date:"Y-m-d" }}<br>
-        Due: {{ homework.due_date|date:"Y-m-d" }}<br>
-    </li>
-    {% endfor %}
-</ul>
-    
-<div id="calendar"></div>
+<div id="calendar" style="max-width: 100%; margin: 20px 0;"></div>
 
 <!-- Include FullCalendar CSS and JS -->
 <link href="https://cdn.jsdelivr.net/npm/fullcalendar@5.9.0/main.min.css" rel="stylesheet">
@@ -22,29 +12,34 @@
 <script>
 document.addEventListener('DOMContentLoaded', function() {
     var calendarEl = document.getElementById('calendar');
+
     var calendar = new FullCalendar.Calendar(calendarEl, {
-        initialView: 'dayGridMonth', 
+        initialView: 'dayGridMonth',  
         headerToolbar: {
-            left: 'prev,next today',
-            center: 'title',
-            right: 'dayGridMonth,timeGridWeek,timeGridDay'
+            left: 'prev,next today',   
+            center: 'title',           
+            right: 'dayGridMonth,timeGridWeek,timeGridDay'  
         },
         events: [
             {% for homework in homeworks %}
             {
                 title: '{{ homework.title }}',
-                start: '{{ homework.assigned_date|date:"Y-m-d" }}',  
-                end: '{{ homework.due_date|date:"Y-m-d" }}', 
+                start: '{{ homework.assigned_date|date:"Y-m-d" }}', 
+                end: '{{ homework.due_date|date:"Y-m-d" }}',  
                 backgroundColor: 'green',  
+                display: 'block',  
             },
             {% endfor %}
         ],
         eventColor: '#378006',  
-        editable: false,
+        editable: false,  
+        aspectRatio: 1.35, 
+        expandRows: true,  
         eventClick: function(info) {
             alert('Homework: ' + info.event.title + '\nDue on: ' + info.event.end.toISOString().split('T')[0]);
         }
     });
+
     calendar.render();
 });
 </script>
