--- a/templates/profile.html
+++ b/templates/profile.html
@@ -7,7 +7,7 @@
         {% if user.profile_picture %}
             <img src="{{ user.profile_picture.url }}" alt="{{ user.get_full_name }}">
         {% else %}
-            <img src="{% static 'images/default_profile.png' %}" alt="No profile picture">
+            <img src="{% static 'images/default_profile.png' %}" alt="No profile picture" style="text-align: center">
         {% endif %}
     </div>
 
