--- a/templates/base.html
+++ b/templates/base.html
@@ -16,6 +16,8 @@
     <link rel="stylesheet" type="text/css" href="{% static 'styles/upload_submission.css' %}">
     <link rel="stylesheet" type="text/css" href="{% static 'styles/give_feedback.css' %}">
     <link rel="stylesheet" type="text/css" href="{% static 'styles/add_homework.css' %}">
+<link rel="stylesheet" type="text/css" href="{% static 'styles/homework_form.css' %}">
+
 </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
